# toytomata

./: .gitignore  Makefile  README.md  dune-project  integrate-documentation
.github/workflows/: ci.yml
docs/: index.html
docs/branch/cyk/: commit-hash  date
docs/branch/main/: commit-hash  date
docs/branch/test-deploy-odoc-action/: commit-hash
docs/branch/tests/: commit-hash  date
src/: dune  toytomata.ml
src/CFG/: AST.ml  AST.mli  AST_to_CST.ml  CFG.ml  CST.ml  CST_to_AST.ml  dune  fromSyntax.ml  lexer.mll  parser.mly  printer.ml  toSyntax.ml
src/CFG/syntax/: CFGSyntax.ml  CST.ml  dune  parser.mly  printer.ml
src/Convert/: CFG_to_PDA.ml  dune
src/PDA/: AST.ml  AST.mli  AST_to_CST.ml  CST.ml  CST_to_AST.ml  PDA.ml  dune  lexer.mll  parser.mly  printer.ml  runner.ml
src/PushdownAutomaton/: parser.mly  runner.mli
src/common/: STHelper.ml  STHelper.mli  common.ml  dune  element.ml  stack.ml  stack.mli
src/convert/: CFG_to_PDA.ml  PDA_to_CFG.ml  convert.ml  dune
src/ext/: dune  ext.ml  extArray.ml  extArray.mli  extList.ml  extList.mli  extSeq.ml  extSeq.mli  extStack.ml
src/lib/: dune  toytomata.ml
src/lib/Common/: CSTHelpers.ml  common.ml  element.ml
src/lib/ContextFreeGrammar/: AST.ml  AST.mli  CST.ml  CST_to_AST.ml  ContextFreeGrammar.ml  dune  parser.mly  transform.ml  transform.mli
src/lib/Convert/: CFG_to_PDA.ml  PDA_to_CFG.ml
src/lib/LanguageRepresentation/: LanguageRepresentation.ml  dune
src/lib/PushdownAutomaton/: AST.ml  CST.ml  dune
src/lib/cfg/: AST.ml  AST.mli  AST_to_CST.ml  CFG.ml  (+7 more)
test/: dune  test.ml  wordsParser.ml
(+240 files in other folders)
